k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyunjun-backend
  namespace: hyunjun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyunjun-backend
  template:
    metadata:
      labels:
        app: hyunjun-backend
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: hyunjun-backend
        image: ktech4.azurecr.io/hyunjun-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hyunjun-backend-service
  namespace: hyunjun
spec:
  type: ClusterIP
  selector:
    app: hyunjun-backend
  ports:
  - port: 5000
    targetPort: 5000
