k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyunjun-frontend
  namespace: hyunjun
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hyunjun-frontend
  template:
    metadata:
      labels:
        app: hyunjun-frontend
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: hyunjun-frontend
        image: ktech4.azurecr.io/hyunjun-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hyunjun-frontend-service
  namespace: hyunjun
spec:
  type: NodePort
  selector:
    app: hyunjun-frontend
  ports:
  - port: 80
    targetPort: 80
